--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@redis/client": "^5.5.5",
     "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "ioredis": "^5.6.1",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "rate-limiter-flexible": "^7.1.1",
